# CodeCounsil

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  codecouncil-roadmap.md  codecounsil.example.yaml  install.sh  proyect.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
.vtspec/: config.yaml  context.md
.vtspec/specs/: codecounsil-mvp.audit.md  codecounsil-mvp.md
adapters/appsec-plugins/: README.md  SKILL.md
adapters/claude-code/: README.md
adapters/copilot-cli/: SKILL.md
adapters/github-copilot/: copilot-instructions.md
adapters/opencode/: AGENTS.md
agents/: REGISTRY.md
agents/ai-quality-reviewer/: agent.md
agents/ai-reviewer/: agent.md
agents/ai-security-reviewer/: agent.md
agents/api-design-reviewer/: agent.md
agents/appsec-reviewer/: agent.md
agents/data-privacy-reviewer/: agent.md
agents/database-reviewer/: agent.md
agents/findings-challenger/: agent.md
agents/finops-reviewer/: agent.md
agents/product-reviewer/: agent.md
agents/project-discovery/: agent.md
agents/qa-reviewer/: agent.md
agents/report-consolidator/: agent.md
agents/senior-developer/: agent.md
agents/software-architect/: agent.md
agents/sre-reviewer/: agent.md
agents/ux-reviewer/: agent.md
checklists/: ai-quality.md  ai-security.md  ai.md  api-design.md  architecture.md  data-privacy.md  database.md  development.md  finops.md  product.md  qa.md  security.md  sre.md  ux.md
core/: __init__.py  cli.py  install.py
core/baseline/: __init__.py  baseline.py
core/config/: __init__.py  loader.py  models.py
core/consolidation/: __init__.py  challenger_debate.py  consolidator.py  cross_domain.py
core/discovery/: __init__.py  discover.py
core/evaluation/: harness.py  metrics.py  runner.py
core/evidence/: __init__.py  collector.py
core/manifest/: __init__.py  manifest.py
core/orchestration/: __init__.py  orchestrator.py  pipeline.py  stages.py
core/output/: __init__.py  workspace.py
core/prompts/: __init__.py  builder.py
core/reporting/: __init__.py  appsec_bridge.py  remediation.py  reporter.py  sarif.py
core/selection/: __init__.py  profiles.py  (+1 more)
schemas/: config.schema.json  execution-manifest.schema.json  finding.schema.json  project-context.schema.json
scripts/: collect_repository_metadata.py  detect_tooling.py  normalize_results.py
templates/: backlog.md.j2  executive-summary.md.j2  technical-report.md.j2
tests/: conftest.py
(+76 files in other folders)
