[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codecounsil"
version = "0.1.0"
description = "Multi-disciplinary code review framework orchestrating specialized agents"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
project-review = "core.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.build]
include = [
    "/core",
    "/agents",
    "/adapters",
    "/checklists",
    "/schemas",
    "/templates",
    "/scripts",
    "/README.md",
    "/codecounsil.example.yaml",
]

[tool.hatch.build.targets.wheel]
packages = ["core"]
