[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codecounsil"
version = "1.1.0"
description = "Multi-disciplinary code review framework orchestrating specialized agents for evidence-based structured findings"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["code-review", "security", "agents", "llm", "quality"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
dependencies = [
    "pydantic>=2.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
project-review = "core.cli:main"
codecounsil-install = "core.install:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.build]
include = [
    "/core",
    "/agents",
    "/adapters",
    "/checklists",
    "/schemas",
    "/templates",
    "/scripts",
    "/README.md",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/LICENSE",
    "/codecounsil.example.yaml",
]

[tool.hatch.build.targets.wheel]
packages = ["core"]
